force-app/main/default/objects/DSALES_Endoso__c/DSALES_Endoso__c.object-meta.xml
<CustomObject>
    <label>Endoso</label>
    <nameField>
        <label>Nombre de Endoso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endosos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>