force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Cliente__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para indicar cual es el dueño del endoso</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Endosos</relationshipLabel>
    <relationshipName>Endosos</relationshipName>
    <type>Lookup</type>
</CustomField>