force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Correo_electr_nico__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Correo_electr_nico__c</fullName>
    <description>Campo para ingresar el correo electrónico para envió de estatus de el endoso</description>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>