force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Dosdiassinupdate__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Dosdiassinupdate__c</fullName>
    <formula>(NOW() - LastModifiedDate )&gt; 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dos días sin update</label>
    <type>Checkbox</type>
</CustomField>