force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Enviadoaproveedor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Enviadoaproveedor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enviado a proveedor</label>
    <type>Checkbox</type>
</CustomField>