force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Estatus__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Estatus__c</fullName>
    <description>Campos para saber en que procesos se encuentra un endoso.</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <color>#AFCADF</color>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>En tramite</fullName>
                <color>#EFAE73</color>
                <label>En tramite</label>
            </value>
            <value>
                <fullName>Requerimiento de Información</fullName>
                <color>#F3D904</color>
                <label>Requerimiento de Información</label>
            </value>
            <value>
                <fullName>Autorizado</fullName>
                <color>#57F17C</color>
                <label>Autorizado</label>
            </value>
            <value>
                <fullName>Rechazado</fullName>
                <color>#FF0000</color>
                <label>Rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>