force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Fechadecreacin__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadecreacin__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>