force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Folio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Folio__c</fullName>
    <description>Campo para registrar el nuevo numero de folio de la póliza</description>
    <label>Folio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>