force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Motivo_de_devoluci_n__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motivo_de_devoluci_n__c</fullName>
    <label>Motivo de devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>