force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_MotivoRechazo__c</fullName>
    <description>Campo para ingresar cual fue el motivo de rechazo del endoso</description>
    <label>Motivo de rechazo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>