force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_NmerodeclienteCoppel__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NmerodeclienteCoppel__c</fullName>
    <description>Campo para ingresar el numero de cliente si es cliente de crédito Coppel</description>
    <label>Número de cliente Coppel</label>
    <length>12</length>
    <type>Text</type>
</CustomField>