force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_NuevaPoliza__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NuevaPoliza__c</fullName>
    <description>Nueva póliza enviada por proveedor</description>
    <label>Nueva Póliza</label>
    <length>32</length>
    <type>Text</type>
</CustomField>