force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Soluci_n_a_devoluci_n__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Soluci_n_a_devoluci_n__c</fullName>
    <description>Campo para ingresar la solución para darle solución al endoso</description>
    <label>Solución a devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>