force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Tipodedato__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodedato__c</fullName>
    <label>Tipo de dato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
            <value>
                <fullName>Número telefónico</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>RFC</fullName>
            </value>
            <value>
                <fullName>Número de placa</fullName>
            </value>
            <value>
                <fullName>Número de serie</fullName>
            </value>
            <value>
                <fullName>Número de motor</fullName>
            </value>
            <value>
                <fullName>Nombre, RFC y Domicilio</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Dirección</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>