force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Tipodedocumento__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodedocumento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DSALES_Tipodeendoso__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Comprobante de domicilio</fullName>
            </value>
            <value>
                <fullName>Identificación oficial</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Tarjeta de circulación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>