force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Tipodeendoso__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodeendoso__c</fullName>
    <description>Campo para ingresar que tipo de endoso se va a generar</description>
    <label>Tipo de endoso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de dirección</fullName>
            </value>
            <value>
                <fullName>Cambio de placas</fullName>
            </value>
            <value>
                <fullName>Cambio de titular</fullName>
            </value>
            <value>
                <fullName>Cambio No. motor</fullName>
            </value>
            <value>
                <fullName>Cambio No. serie</fullName>
            </value>
            <value>
                <fullName>Corrección de datos fiscales</fullName>
            </value>
            <value>
                <fullName>Corrección de nombre</fullName>
            </value>
            <value>
                <fullName>Corrección de RFC</fullName>
            </value>
            <value>
                <fullName>Actualización de correo electrónico</fullName>
            </value>
            <value>
                <fullName>Actualización de teléfono</fullName>
            </value>
            <value>
                <fullName>Actualización de color</fullName>
            </value>
            <value>
                <fullName>Beneficiario preferente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>