force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_uid__c.field-meta.xml
<CustomField>
    <fullName>DSALES_uid__c</fullName>
    <description>Identificador que vincula con el proveedor</description>
    <label>Número de folio del proveedor</label>
    <length>62</length>
    <type>Text</type>
</CustomField>