force-app/main/default/objects/DSALES_Endoso__c/fields/DSALES_Valor__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Valor__c</fullName>
    <description>Campo para ingresar el dato que se va a mandar a Inter para actualizar en la póliza</description>
    <label>Dato por actualizar</label>
    <length>60</length>
    <type>Text</type>
</CustomField>