force-app/main/default/objects/DSALES_Endoso__c/fields/P_liza__c.field-meta.xml
<CustomField>
    <fullName>P_liza__c</fullName>
    <label>Póliza</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Endosos</relationshipLabel>
    <relationshipName>Endosos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>