force-app/main/default/objects/DSALES_Endoso__c/listViews/DSALES_Mis_endosos.listView-meta.xml
<ListView>
    <fullName>DSALES_Mis_endosos</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Folio__c</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DSALES_Estatus__c</columns>
    <columns>DSALES_Poliza__c</columns>
    <filterScope>Everything</filterScope>
    <!--filterScope>Mine</filterScope-->
    <label>Mis endosos</label>
    <sharedTo>
        <role>DSALES_Admin_SM</role>
        <role>DSALES_Agente_de_servicio_SM</role>
        <role>DSALES_Atenci_n_a_servicio</role>
    </sharedTo>
</ListView>