force-app/main/default/objects/DSALES_Endoso__c/listViews/DSALES_Nuevos_de_esta_semana.listView-meta.xml
<ListView>
    <fullName>DSALES_Nuevos_de_esta_semana</fullName>
    <columns>NAME</columns>
    <columns>DSALES_Folio__c</columns>
    <columns>DSALES_Cliente__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DSALES_Estatus__c</columns>
    <columns>P_liza__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Nuevos de esta semana</label>
    <sharedTo>
        <role>DSALES_Agente_de_servicio_SM</role>
    </sharedTo>
</ListView>